5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1635_2703.log
== TEST (2019-04-03 18:36:41) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):
	mensagem = eleitor
else:
	mensagem = nao_eleitor
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:37:05) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):
	mensagem = eleitor
else:
	mensagem = naoeleitor
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem = naoeleitor
NameError: name 'naoeleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:37:28) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):
	mensagem = eleitor
else:
	mensagem = naoeleitor
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem = naoeleitor
NameError: name 'naoeleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:38:21) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade > 18):
	mensagem = eleitor
else:
	mensagem = nao_eleitor
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:39:33) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade >= 18):
	mensagem = eleitor
else:
	mensagem = nao_eleitor
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:40:15) 
-- CODE:
idade = int(input("digite a idade: "))

if (idade >= 18):
	mensagem = str(eleitor)
else:
	mensagem = str(nao_eleitor)
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem = str(nao_eleitor)
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:41:19) 
-- CODE:
idade = int(input("digite a idade: "))
eleitor = idade >= 18
nao_eleitor = idade < 18

if (idade >= 18):
	mensagem = eleitor
else:
	mensagem = nao_eleitor
	
print(mensagem)
-- OUTPUT:
True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:44:33) 
-- CODE:
idade = int(input("digite a idade: "))
eleitor = idade >= 18
nao_eleitor = idade < 18
mensagem(str)

if (idade >= 18):
	mensagem = eleitor
else:
	mensagem = nao_eleitor
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem(str)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:46:12) 
-- CODE:
idade = int(input("digite a idade: "))
eleitor = idade >= 18
nao_eleitor = idade < 18

if (idade >= 18):
	print(eleitor)
else:
	print(nao_eleitor)
	

-- OUTPUT:
True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:46:39) 
-- CODE:
idade = int(input("digite a idade: "))
eleitor = idade >= 18
nao_eleitor = idade < 18

if (idade >= 18):
	print("eleitor")
else:
	print("nao_eleitor")
	

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:46:46) 
-- CODE:
idade = int(input("digite a idade: "))
eleitor = idade >= 18
nao_eleitor = idade < 18

if (idade >= 18):
	print("eleitor")
else:
	print("nao_eleitor")
	

-- EXECUTION TIME:
0.153679
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
